--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search Example-ivana</title>
+    <title>Search Example-ivana-novo</title>
     <script src="dist/main.js" defer></script>
   </head>
   <body>
